refactoring
- use Authority/Role enum